# cit-assoc-exam

./: .gitignore  README.md  pyproject.toml
data/: a.csv  b.csv  result.csv  result2.csv
docs/: 1.md  10.md  11.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
pcap/: __main__.py
pcap/day02/: __main__.py
pcap/day03/: __main__.py  csv_parser.py
pcap/day04/: __main__.py
pcap/day05/: __main__.py
pcap/day08/: __main__.py  caesar_cipher.py
pcap/day1/: __main__.py
pcap/day10/: __main__.py  uploader.py  youtubeuploader.py
pcap/day11/: __main__.py
pcap/day2/: __main__.py  data.txt
pcap/day3/: __main__.py  csv_parser.py  utils.py
pcap/day4/: __main__.py
pcap/day5/: __main__.py
pcap/day6/: __main__.py
pcap/day8/: __main__.py
pcap/day9/: __main__.py
tests/: expected.csv  test_day3.py
